@@ -17,23 +17,15 @@ import org.apache.commons.lang3.builder.ToStringBuilder;
 import org.springframework.lang.NonNull;
 import tec.uom.lib.common.function.Identifiable;
 
-import javax.persistence.CascadeType;
-import javax.persistence.Column;
-import javax.persistence.Entity;
-import javax.persistence.GeneratedValue;
-import javax.persistence.GenerationType;
-import javax.persistence.Id;
-import javax.persistence.JoinColumn;
-import javax.persistence.OneToMany;
-import javax.persistence.Transient;
+import javax.persistence.*;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 /**
  * A configuration defines which tools are used by querimonia to analyze complaint texts. This
  * consists of entity extractors, classifiers and sentiment analyzers (but not response
  * generators).
+ * <p>Instanced can be created using a {@link ConfigurationBuilder}</p>
  */
 @Entity
 @JsonPropertyOrder(value = {
@@ -41,7 +33,8 @@ import java.util.List;
     "name",
     "extractors",
     "classifiers",
-    "sentimentAnalyzer"
+    "sentimentAnalyzer",
+    "emotionAnalyzer"
 })
 public class Configuration implements Identifiable<Long> {
 
@@ -52,10 +45,10 @@ public class Configuration implements Identifiable<Long> {
   @Transient
   @JsonIgnore
   public static final Configuration FALLBACK_CONFIGURATION = new ConfigurationBuilder()
-      .setName("Default")
-      .setExtractors(Collections.emptyList())
-      .setClassifiers(List.of(
-          new ClassifierDefinition(ClassifierType.NONE, "Default", "Kategorie")))
+      .setName("Leere Konfiguration")
+      .setExtractors(new ArrayList<>())
+      .setClassifiers(new ArrayList<>(List.of(
+          new ClassifierDefinition(ClassifierType.NONE, "Default", "Kategorie"))))
       .setSentimentAnalyzer(new SentimentAnalyzerDefinition(SentimentAnalyzerType.NONE, "Default"))
       .setEmotionAnalyzer(new EmotionAnalyzerDefinition(EmotionAnalyzerType.NONE, "Default"))
       .setActive(false)
@@ -70,12 +63,12 @@ public class Configuration implements Identifiable<Long> {
   @NonNull
   private String name = "";
 
-  @OneToMany(cascade = CascadeType.ALL)
+  @OneToMany(cascade = CascadeType.ALL, fetch = FetchType.EAGER)
   @JoinColumn(name = "config_id")
   @NonNull
   private List<ExtractorDefinition> extractors = new ArrayList<>();
 
-  @OneToMany(cascade = CascadeType.ALL)
+  @OneToMany(cascade = CascadeType.ALL, fetch = FetchType.LAZY)
   @JoinColumn(name = "config_id")
   @NonNull
   private List<ClassifierDefinition> classifiers = new ArrayList<>();
@@ -89,22 +82,50 @@ public class Configuration implements Identifiable<Long> {
   private boolean active = false;
 
   /**
-   * Creates a new configuration object.
-   *
-   * @param name              a identifier for the configuration.
-   * @param extractors        the list of extractors.
-   * @param classifiers       the classifiers of this configuration.
-   * @param sentimentAnalyzer the sentiment analyzer.
+   * Json constructor.
    */
   @JsonCreator
+  @SuppressWarnings("unused")
   Configuration(
-      long id,
-      @NonNull String name,
-      @NonNull List<ExtractorDefinition> extractors,
-      @NonNull List<ClassifierDefinition> classifiers,
-      @NonNull SentimentAnalyzerDefinition sentimentAnalyzer,
-      @NonNull EmotionAnalyzerDefinition emotionAnalyzer,
-      boolean active) {
+
+      @JsonProperty("name")
+      @NonNull
+          String name,
+
+      @JsonProperty(value = "extractors", required = true)
+      @NonNull
+          List<ExtractorDefinition> extractors,
+
+      @JsonProperty(value = "classifiers", required = true)
+      @NonNull
+          List<ClassifierDefinition> classifiers,
+
+      @JsonProperty(value = "sentimentAnalyzer", required = true)
+      @NonNull
+          SentimentAnalyzerDefinition sentimentAnalyzer,
+
+      @JsonProperty(value = "emotionAnalyzer", required = true)
+      @NonNull
+          EmotionAnalyzerDefinition emotionAnalyzer) {
+
+    this.name = name;
+    this.extractors = extractors;
+    this.classifiers = classifiers;
+    this.sentimentAnalyzer = sentimentAnalyzer;
+    this.emotionAnalyzer = emotionAnalyzer;
+    this.active = false;
+  }
+
+  /**
+   * Constructor for builder.
+   */
+  Configuration(long id,
+                @NonNull String name,
+                @NonNull List<ExtractorDefinition> extractors,
+                @NonNull List<ClassifierDefinition> classifiers,
+                @NonNull SentimentAnalyzerDefinition sentimentAnalyzer,
+                @NonNull EmotionAnalyzerDefinition emotionAnalyzer,
+                boolean active) {
     this.configId = id;
     this.name = name;
     this.extractors = extractors;
@@ -119,51 +140,112 @@ public class Configuration implements Identifiable<Long> {
     // for hibernate
   }
 
+  /**
+   * Returns the unique id of the configuration.
+   *
+   * @return the unique id of the configuration.
+   */
+  @Override
+  @JsonProperty("id")
+  public Long getId() {
+    return configId;
+  }
+
+  /**
+   * Returns a copy of this configuration with the id set to the given id.
+   *
+   * @param configId the id that the configuration should have.
+   *
+   * @return a copy of this configuration with the id set to the given id.
+   */
   public Configuration withConfigId(long configId) {
     return new ConfigurationBuilder(this)
         .setId(configId)
         .createConfiguration();
   }
 
+  /**
+   * Returns the name of the configuration. The name is an attribute that is chosen by the user
+   * to identify configurations.
+   *
+   * @return the name of the configuration.
+   */
   @NonNull
   public String getName() {
     return name;
   }
 
+  /**
+   * Returns the list of {@link ExtractorDefinition extractors} that are used in this
+   * configuration. All extractors that are defined in this list will be used in the analysis
+   * when this configuration is selected.
+   *
+   * @return the list of {@link ExtractorDefinition extractors} that are used in this configuration.
+   */
   @NonNull
   public List<ExtractorDefinition> getExtractors() {
     return extractors;
   }
 
+  /**
+   * Returns the list of {@link ClassifierDefinition classifiers} that are used in this
+   * configuration. All classifiers. that are defined in this list will be used in the analysis
+   * when this configuration is selected.
+   *
+   * @return the list of {@link ClassifierDefinition classifiers} that are used in this
+   * configuration.
+   */
   @NonNull
   public List<ClassifierDefinition> getClassifiers() {
     return classifiers;
   }
 
+  /**
+   * Returns the {@link SentimentAnalyzerDefinition sentiment analyzer} that is defined in this
+   * configuration.
+   *
+   * @return the {@link SentimentAnalyzerDefinition sentiment analyzer} that is defined in this
+   * configuration.
+   */
   @NonNull
   public SentimentAnalyzerDefinition getSentimentAnalyzer() {
     return sentimentAnalyzer;
   }
 
+  /**
+   * Returns the {@link EmotionAnalyzerDefinition emotion analyzer} that is defined in this
+   * configuration.
+   *
+   * @return the {@link EmotionAnalyzerDefinition emotion analyzer} that is defined in this
+   * configuration.
+   */
   @NonNull
   public EmotionAnalyzerDefinition getEmotionAnalyzer() {
     return emotionAnalyzer;
   }
 
+  /**
+   * Returns true, if this is the currently active configuration. There should always be only one
+   * active configuration. The active configuration is used in the analysis process by default.
+   *
+   * @return true, if this is the currently active configuration, else false.
+   */
   public boolean isActive() {
     return active;
   }
 
+  /**
+   * Returns a copy of this configuration with the given active state. There should always be
+   * only one active configuration.
+   *
+   * @param active if the copy should be the active configuration or not.
+   *
+   * @return a copy of this configuration with the given active state.
+   */
   public Configuration withActive(boolean active) {
     return new ConfigurationBuilder(this)
         .setActive(active)
         .createConfiguration();
-  }
-
-  @Override
-  @JsonProperty("id")
-  public Long getId() {
-    return configId;
   }
 
   @Override
