@@ -1,249 +1,144 @@
-/*
+
 package de.fraunhofer.iao.querimonia.response.generation;
 
-import de.fraunhofer.iao.querimonia.complaint.ComplaintData;
-import de.fraunhofer.iao.querimonia.db.repositories.ActionRepository;
-import de.fraunhofer.iao.querimonia.db.repositories.ResponseComponentRepository;
+import de.fraunhofer.iao.querimonia.complaint.ComplaintBuilder;
+import de.fraunhofer.iao.querimonia.db.repository.MockComponentRepository;
 import de.fraunhofer.iao.querimonia.nlp.NamedEntity;
-import de.fraunhofer.iao.querimonia.response.generation.ResponseComponent;
+import de.fraunhofer.iao.querimonia.nlp.NamedEntityBuilder;
 import org.junit.Before;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
-import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 
-import static org.junit.Assert.assertEquals;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static de.fraunhofer.iao.querimonia.complaint.TestComplaints.*;
+import static de.fraunhofer.iao.querimonia.response.component.TestComponents.*;
+import static org.junit.Assert.*;
 
 
-*/
 /**
  * Unit test class for DefaultResponseGenerator.
  *
  * @author Simon Weiler
- *//*
+ */
 
 
 public class DefaultResponseGeneratorTest {
 
   private DefaultResponseGenerator defaultResponseGenerator;
 
-  private static ResponseComponent testComponentName;
-  private static ResponseComponent testComponentDate;
-  private static ResponseComponent testComponentStopAndLinesNone;
-  private static ResponseComponent testComponentStopAndLinesOnlyStop;
-  private static ResponseComponent testComponentStopAndLinesOnlyLine;
-  private static ResponseComponent testComponentStopAndLinesAll;
-  private static ResponseComponent testComponentMoneyWith;
-  private static ResponseComponent testComponentMoneyWithout;
-  private static ResponseComponent testComponentFinish;
-
-  private static List<ResponseComponent> testTemplates = new ArrayList<>();
+  private static List<ResponseComponent> testComponents = new ArrayList<>();
 
   @BeforeClass
   public static void initializeResponseComponents() {
-    testComponentName = new ResponseComponent("Begrüßung",
-            Collections.singletonList("Hallo ${Name}!"),
-            "<Rules>" +
-                    "<And>" +
-                    "<PredecessorCount max=\"0\" />" +
-                    "<EntityAvailable label=\"Name\" />" +
-                    "</And>" +
-                    "</Rules>");
-
-    testComponentDate = new ResponseComponent("Eingangsdatum",
-            Collections.singletonList("Danke für deine Beschwerde vom ${UploadDatum}."),
-            "<Rules>" +
-                    "<Predecessor matches=\"Begrüßung\" position=\"last\" />" +
-                    "</Rules>");
-
-    testComponentStopAndLinesNone = new ResponseComponent("ProblembeschreibungKeinePlatzhalter",
-            Collections.singletonList("Darin hast du dich über ein Problem mit unserem Betrieb beschwert."),
-            "<Rules>" +
-                    "<And>" +
-                    "<Predecessor matches=\"Eingangsdatum\" position=\"last\" />" +
-                    "<Not>" +
-                    "<EntityAvailable label=\"Haltestelle\" />" +
-                    "</Not>" +
-                    "<Not>" +
-                    "<EntityAvailable label=\"Linie\" />" +
-                    "</Not>" +
-                    "</And>" +
-                    "</Rules>");
-
-    testComponentStopAndLinesOnlyStop = new ResponseComponent("ProblembeschreibungNurHaltestelle",
-            Collections.singletonList("Darin hast du dich über die Haltestelle ${Haltestelle} beschwert."),
-            "<Rules>" +
-                    "<And>" +
-                    "<Predecessor matches=\"Eingangsdatum\" position=\"last\" />" +
-                    "<EntityAvailable label=\"Haltestelle\" />" +
-                    "<Not>" +
-                    "<EntityAvailable label=\"Linie\" />" +
-                    "</Not>" +
-                    "</And>" +
-                    "</Rules>");
-
-    testComponentStopAndLinesOnlyLine = new ResponseComponent("ProblembeschreibungNurLinie",
-            Collections.singletonList("Darin hast du dich über die Linie ${Linie} beschwert."),
-            "<Rules>" +
-                    "<And>" +
-                    "<Predecessor matches=\"Eingangsdatum\" position=\"last\" />" +
-                    "<Not>" +
-                    "<EntityAvailable label=\"Haltestelle\" />" +
-                    "</Not>" +
-                    "<EntityAvailable label=\"Linie\" />" +
-                    "</And>" +
-                    "</Rules>");
-
-    testComponentStopAndLinesAll = new ResponseComponent("ProblembeschreibungHaltestelleUndLinie",
-            Collections.singletonList("Darin hast du dich über die Haltestelle ${Haltestelle} der Linie ${Linie} beschwert."),
-            "<Rules>" +
-                    "<And>" +
-                    "<Predecessor matches=\"Eingangsdatum\" position=\"last\" />" +
-                    "<EntityAvailable label=\"Haltestelle\" />" +
-                    "<EntityAvailable label=\"Linie\" />" +
-                    "</And>" +
-                    "</Rules>");
-
-    testComponentMoneyWith = new ResponseComponent("ErstattungMitGeldbetrag",
-            Collections.singletonList("Dafür zahlen wir dir ${Geldbetrag}!"),
-            "<Rules>" +
-                    "<And>" +
-                    "<Predecessor matches=\"Problembeschreibung.*\" position=\"last\" />" +
-                    "<EntityAvailable label=\"Geldbetrag\" />" +
-                    "</And>" +
-                    "</Rules>");
-
-    testComponentMoneyWithout = new ResponseComponent("ErstattungOhneGeldbetrag",
-            Collections.singletonList("Dafür zahlen wir dir etwas Geld!"),
-            "<Rules>" +
-                    "<And>" +
-                    "<Predecessor matches=\"Problembeschreibung\" position=\"last\" />" +
-                    "<Not>" +
-                    "<EntityAvailable label=\"Geldbetrag\" />" +
-                    "</Not>" +
-                    "</And>" +
-                    "</Rules>");
-
-    testComponentFinish = new ResponseComponent("Schluss",
-            Collections.singletonList("Tschüss!"),
-            "<Rules>" +
-                    "<Predecessor matches=\"Erstattung.*\" position=\"last\" />" +
-                    "</Rules>");
-
-    testTemplates.add(testComponentName);
-    testTemplates.add(testComponentDate);
-    testTemplates.add(testComponentStopAndLinesNone);
-    testTemplates.add(testComponentStopAndLinesOnlyStop);
-    testTemplates.add(testComponentStopAndLinesOnlyLine);
-    testTemplates.add(testComponentStopAndLinesAll);
-    testTemplates.add(testComponentMoneyWith);
-    testTemplates.add(testComponentMoneyWithout);
-    testTemplates.add(testComponentFinish);
+    testComponents.add(COMPONENT_NAME);
+    testComponents.add(COMPONENT_DATE);
+    testComponents.add(COMPONENT_TIME);
+    testComponents.add(COMPONENT_PROBLEM_NONE);
+    testComponents.add(COMPONENT_PROBLEM_ONLY_STOP);
+    testComponents.add(COMPONENT_PROBLEM_ONLY_LINE);
+    testComponents.add(COMPONENT_PROBLEM_STOP_AND_LINE);
+    testComponents.add(COMPONENT_MONEY_WITH);
+    testComponents.add(COMPONENT_MONEY_WITHOUT);
+    testComponents.add(COMPONENT_FINISH);
   }
 
   @Before
   public void setup() {
-    ResponseComponentRepository templateRepository = mock(ResponseComponentRepository.class);
-    ActionRepository actionRepository = mock(ActionRepository.class);
-    defaultResponseGenerator = new DefaultResponseGenerator(templateRepository, actionRepository);
-    when(templateRepository.findAll()).thenReturn(testTemplates);
-    when(actionRepository.findAll()).thenReturn(new ArrayList<>());
+    MockComponentRepository templateRepository = new MockComponentRepository();
+    templateRepository.saveAll(testComponents);
+    defaultResponseGenerator = new DefaultResponseGenerator(templateRepository);
   }
 
   @Test
   public void testGenerateResponseStandard() {
-    String text = "Ich bin Peter. Die Haltestelle Hauptbahnhof der Linie U6 ist schlecht. Bitte gebt mir 20€!";
 
-    Map<String, Double> subjectMap = new HashMap<>();
-    subjectMap.put("Kein Test", 0.0);
-    subjectMap.put("Bestimmt kein Test", 0.5);
-    subjectMap.put("Test", 0.85);
+    CompletedResponseComponent componentNameCompleted = new CompletedResponseComponent(COMPONENT_NAME,
+        List.of(new NamedEntityBuilder()
+            .setLabel("Name")
+            .setStart(6)
+            .setEnd(11)
+            .setSetByUser(false)
+            .setExtractor("None")
+            .setValue("Peter")
+            .createNamedEntity()));
 
-    Map<String, Double> sentimentMap = new HashMap<>();
-    sentimentMap.put("Freude", 0.0);
-    sentimentMap.put("Wut", 0.5);
-    sentimentMap.put("Trauer", 0.25);
+    CompletedResponseComponent componentDateCompleted = new CompletedResponseComponent(COMPONENT_DATE,
+        List.of(new NamedEntityBuilder()
+            .setLabel("Eingangsdatum")
+            .setStart(31)
+            .setEnd(44)
+            .setSetByUser(false)
+            .setExtractor("None")
+            .setValue("20. Juni 2019")
+            .createNamedEntity()));
 
-    List<NamedEntity> entities = new ArrayList<>();
-    entities.add(new NamedEntity("Name", 8, 13,null));
-    entities.add(new NamedEntity("Haltestelle", 31, 43,null));
-    entities.add(new NamedEntity("Linie", 54, 56,null));
-    entities.add(new NamedEntity("Geldbetrag", 86, 89,null));
+    CompletedResponseComponent componentTimeCompleted = new CompletedResponseComponent(COMPONENT_TIME,
+        List.of(new NamedEntityBuilder()
+            .setLabel("Eingangszeit")
+            .setStart(31)
+            .setEnd(44)
+            .setSetByUser(false)
+            .setExtractor("None")
+            .setValue("12:00:00")
+            .createNamedEntity()));
 
-    SingleCompletedComponent testSingleComponentName = new SingleCompletedComponent("Hallo Peter!",
-            Collections.singletonList(new NamedEntity("Name", 6, 11,null)));
+    CompletedResponseComponent componentStopAndLinesCompleted = new CompletedResponseComponent(COMPONENT_PROBLEM_STOP_AND_LINE,
+        List.of(new NamedEntityBuilder()
+                .setLabel("Haltestelle")
+                .setStart(80)
+                .setEnd(94)
+                .setSetByUser(false)
+                .setExtractor("None")
+                .setValue("Hauptbahnhof")
+                .createNamedEntity(),
+            new NamedEntityBuilder()
+                .setLabel("Linie")
+                .setStart(105)
+                .setEnd(107)
+                .setSetByUser(false)
+                .setExtractor("None")
+                .setValue("U6")
+                .createNamedEntity()));
 
-    SingleCompletedComponent testSingleComponentDate = new SingleCompletedComponent("Danke für deine " +
-            "Beschwerde vom 20. Juni 2019.",
-            Collections.singletonList(new NamedEntity("UploadDatum", 31, 44,null)));
+    CompletedResponseComponent componentMoneyCompleted = new CompletedResponseComponent(COMPONENT_MONEY_WITH,
+        List.of(new NamedEntityBuilder()
+            .setLabel("Geldbetrag")
+            .setStart(63)
+            .setEnd(66)
+            .setSetByUser(false)
+            .setExtractor("None")
+            .setValue("20€")
+            .createNamedEntity()));
 
-    SingleCompletedComponent testSingleComponentStopAndLines = new SingleCompletedComponent("Darin hast " +
-            "du dich über die Haltestelle Hauptbahnhof der Linie U6 beschwert.",
-            new ArrayList<>(Arrays.asList(
-                    new NamedEntity("Haltestelle", 40, 52,null),
-                    new NamedEntity("Linie", 63, 65,null))));
+    CompletedResponseComponent componentFinishCompleted = new CompletedResponseComponent(COMPONENT_FINISH,
+        Collections.emptyList());
 
-    SingleCompletedComponent testSingleComponentMoney = new SingleCompletedComponent("Dafür zahlen wir " +
-            "dir 20€!",
-            Collections.singletonList(new NamedEntity("Geldbetrag", 21, 24,null)));
+    List<CompletedResponseComponent> correctResponseComponents = List.of(componentNameCompleted,
+        componentDateCompleted, componentTimeCompleted, componentStopAndLinesCompleted,
+        componentMoneyCompleted, componentFinishCompleted);
 
-    SingleCompletedComponent testSingleComponentFinish = new SingleCompletedComponent("Tschüss!",
-            new ArrayList<>());
+    ComplaintBuilder complaintBuilder = new ComplaintBuilder(COMPLAINT_F);
 
-    List<CompletedResponseComponent> correctResponseComponents = new ArrayList<>();
-    correctResponseComponents.add(new CompletedResponseComponent(Collections.singletonList(testSingleComponentName),
-            testComponentName));
-
-    correctResponseComponents.add(new CompletedResponseComponent(Collections.singletonList(testSingleComponentDate),
-            testComponentDate));
-
-    correctResponseComponents.add(new CompletedResponseComponent(Collections.singletonList(testSingleComponentStopAndLines),
-            testComponentStopAndLinesAll));
-
-    correctResponseComponents.add(new CompletedResponseComponent(Collections.singletonList(testSingleComponentMoney),
-            testComponentMoneyWith));
-
-    correctResponseComponents.add(new CompletedResponseComponent(Collections.singletonList(testSingleComponentFinish),
-            testComponentFinish));
-
-    ComplaintData testComplaintData = new ComplaintData(text,
-            subjectMap,
-            sentimentMap,
-            entities,
-            LocalDateTime.of(2019, 6, 20, 18, 0));
-
-    ResponseSuggestion testResponseSuggestion = defaultResponseGenerator.generateResponse(testComplaintData);
+    ResponseSuggestion testResponseSuggestion = defaultResponseGenerator.generateResponse(complaintBuilder);
+    assertEquals(Collections.emptyList(), testResponseSuggestion.getActions());
     List<CompletedResponseComponent> testResponseComponents = testResponseSuggestion.getResponseComponents();
 
     for (int i = 0; i < correctResponseComponents.size(); i++) {
-      CompletedResponseComponent correctComponent = correctResponseComponents.get(i);
-      CompletedResponseComponent testComponent = testResponseComponents.get(i);
+      CompletedResponseComponent correctCompletedComponent = correctResponseComponents.get(i);
+      CompletedResponseComponent testCompletedComponent = testResponseComponents.get(i);
+      ResponseComponent correctComponent = correctCompletedComponent.getComponent();
+      ResponseComponent testComponent = testCompletedComponent.getComponent();
 
-      assertEquals(correctComponent.getAlternatives().get(0).getCompletedText(),
-              testComponent.getAlternatives().get(0).getCompletedText());
+      assertEquals(correctCompletedComponent.getResponsePartId(),
+          testCompletedComponent.getResponsePartId());
+      assertEquals(correctComponent, testComponent);
 
-      assertEquals(correctComponent.getComponent(), testComponent.getComponent());
-
-      List<NamedEntity> correctEntities = correctComponent.getAlternatives()
-              .stream()
-              .flatMap(s -> s.getEntities().stream())
-              .collect(Collectors.toList());
-
-      List<NamedEntity> testEntities = testComponent.getAlternatives()
-              .stream()
-              .flatMap(s -> s.getEntities().stream())
-              .collect(Collectors.toList());
-
-      for (int j = 0; j < correctEntities.size(); j++) {
-        NamedEntity correctEntity = correctEntities.get(j);
-        NamedEntity testEntity = testEntities.get(j);
-        assertEquals(correctEntity, testEntity);
+      for (int j = 0; j < correctCompletedComponent.getEntities().size(); j++) {
+        NamedEntity correctEntity = correctCompletedComponent.getEntities().get(j);
+        NamedEntity testEntity = testCompletedComponent.getEntities().get(j);
+        assertEquals(correctEntity.getValue(), testEntity.getValue());
       }
     }
   }
 }
-*/
